--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="winner"></div>
+        <div>player 1 : <span id="player1">0</span></div>
+        <div>player 2 : <span id="player2">0</span></div>
+        <button id="reset-btn">reset</button>
         <div class="board">
             <div class="box box1"></div>
             <div class="box box2"></div>
