--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 </head>
 <body>
     <div class="container">
-        <div>player 1 : <span id="player1">0</span></div>
-        <div>player 2 : <span id="player2">0</span></div>
-        <button id="reset-btn">reset</button>
-        <div class="board">
-            <div class="box box1"></div>
-            <div class="box box2"></div>
-            <div class="box box3"></div>
-            <div class="box box4"></div>
-            <div class="box box5"></div>
-            <div class="box box6"></div>
-            <div class="box box7"></div>
-            <div class="box box8"></div>
-            <div class="box box9"></div>
+        <div id="blink-box" class="sub-container">
+            <div class="controls">
+                <div>PLAYER 1 : <span id="player1">0</span></div>
+                <div>PLAYER 2 : <span id="player2">0</span></div>
+                <button id="reset-btn">reset</button>
+            </div>
+            <div class="board">
+                <div class="box box1"></div>
+                <div class="box box2"></div>
+                <div class="box box3"></div>
+                <div class="box box4"></div>
+                <div class="box box5"></div>
+                <div class="box box6"></div>
+                <div class="box box7"></div>
+                <div class="box box8"></div>
+                <div class="box box9"></div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
