--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="blink-box" class="sub-container">
+        <div class="sub-container">
             <div class="controls">
                 <div>PLAYER 1 : <span id="player1">0</span></div>
                 <div>PLAYER 2 : <span id="player2">0</span></div>
